    - READ_REFERENCES: the search results contain *only* read access to a field.
    - WRITE_REFERENCES: the search results contain *only* write access to a field.
    Note that if REFERENCES is used, then search results contain both read and write
    accesss to a field.
  
  PRs Fixed in this Release
  ================================================================================
  1GL12XE: ITPJCORE:WIN2000 - search: missing field references in inner class
  1GL0X82: ITPJCORE:ALL - ClassCastException setting args on class file
  1GKAQJS: ITPJCORE:WIN2000 - search: incorrect results for nested types
  1GKZ8VZ: ITPJCORE:WINNT - Search - did not find references to member constructor
  1GKYS7Y: ITPJCORE:WINNT - Main not found
  1GELSDQ: ITPJUI:WINNT - JDOM: IType.createMethod does not insert nicely for inner types
  1GF67VL: ITPJUI:WIN98 - DCR - CodeCompletion - Code-assist for listener methods
  1GFK8YT: ITPJUI:ALL - Rename CU A.B.java to AB.java fails (NPE)
  1GD06J6: ITPJUI:WIN98 - Code assist should qualify fields if needed.
  1FZWGMG: ITPCOM:WIN98 - DCR - CodeAssist - code assist should provide method signature completions
  1GHVOQE: ITPJCORE:WINNT - Ambiguous completion in CodeAssist
  1G8DEAB: ITPJUI:WINNT - DCR: code assist super methods when defining method

  PRs Closed in this Release
  ===============================================================================
  1GKRLZ4: ITPJCORE:WIN2000 - Compiler overzealous with commas
  1GF98R4: ITPJUI:WINNT - JM - why is a file A.B.java seen as a compilation unit?


**********************************************************************************
*** STABLE CONTENT (2.0 STREAM, v_202_01) ****************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  * OpenOnSelection can now locate selected declarations which have a corresponding