@@ -150,6 +150,7 @@ STREAM: 2.0
   
   PRs Fixed in this Release
   ================================================================================
+  1GL11J6: ITPJCORE:WIN2000 - search: missing field references (nested types)
   1GL12XE: ITPJCORE:WIN2000 - search: missing field references in inner class
   1GL0X82: ITPJCORE:ALL - ClassCastException setting args on class file
   1GKAQJS: ITPJCORE:WIN2000 - search: incorrect results for nested types
